Version 17.60 - 15 November 2016

- partitioning:
  o fix being unable to format a newly part (mga#19172)
  o offer to format unmounted parts that have a defined mount point

Version 17.58 - 24 October 2016

- bootloader configuration:
  o make kernel server default if installed
    (we were only checking for long dead flavors such as enterprise, ...)
- fix build with latest URPM aka include perl-Math-Int64 (mga#19640)

Version 17.57 - 21 September 2016

- use new CSS syntax for font (mga#19430)

Version 17.56 - 19 September 2016

- detect ovirt too (mga#19308)
- fix gtk+3.22 regression (mga#19406)
- sync nonfree firmware list with kernel-4.7

Version 17.55 - 13 August 2016

- New left background for Mageia 6 RC

Version 17.54 - 13 August 2016

- autologin/desktop configuration (shared code):
  o add support for LXDM (mga#17616)
  o add support for SDDM (mga#17913)

Version 17.53 - 31 July 2016

- bootloader configuration:
  o fix .old backup for grub2's grub.cfg
- partionning:
  o first usable sector is LBA34 for GPT
  o respect used scheme when clearing a disk
    (ie do not switch from gpt to dos scheme on small disk)

Version 17.52 - 17 July 2016

- do not preinstall mageia-gfxboot-theme
- bootloader configuration:
  o fix not being able to edit default grub2 cmdline (mga#18952)

Version 17.51 - 12 July 2016

- fix starting spice-vdagentd
- partionning:
  o auto_inst: fix clearing an already filled GPT disk
  o don't offer to format RAID or BIOS boot partition
  o make clear a BIOS boot partition cannot have a mount point
  o make error about BIOS boot partition more explicit about
    its purpose and that it must be created (mga#18923)

Version 17.50 - 8 July 2016

- include pvs/vgs/lvs symlinks
- partionning:
  o display a wait message when adding a PV to VG
- libvirt integration:
  o start spice-vdagent{d,} (Qemu guest agent)

Version 17.49 - 6 July 2016

- autoinst:
  e enable to set several swap partitions (mga#9874)
  o enable to select media (mga#12299)