@@ -1,3 +1,6 @@
+- screenshots:
+  o use scrot instead of fb2png as the later doesn't work with vesa (mga#19810)
+
 Version 17.60 - 15 November 2016
 
 - partitioning:
